Fix horizontal content shift (caused by scrollbar dis- / appearing)

--- a/styles/global.css
+++ b/styles/global.css
@@ -87,6 +87,10 @@ body.light-theme {
   --color-tag: #ddd;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 html,
 body {
   width: 100%;
